--- a/JellyDb.Visualisations/MainWindow.xaml
+++ b/JellyDb.Visualisations/MainWindow.xaml
@@ -1,8 +1,38 @@
 ﻿<Window x:Class="JellyDb.Visualisations.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
+        xmlns:controls="clr-namespace:JellyDb.Visualisations.Controls"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        mc:Ignorable="d" 
+        xmlns:visualisations="clr-namespace:JellyDb.Visualisations"
+        Title="MainWindow" Height="350" Width="525" >
+        <d:DesignProperties.DataContext>
+            <Binding Path="MainViewModel">
+                <Binding.Source>
+                    <visualisations:DesignTime/>
+                </Binding.Source>
+            </Binding>
+        </d:DesignProperties.DataContext>
+    <Grid ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto">
+        
+        <controls:MyTreeView ItemsSource="{Binding Node}"/>
+        
+        <!--<controls:MyTreeViewItem>
+            <controls:MyTreeViewItem Key="1" />
+            <controls:MyTreeViewItem Key="2"/>
+            <controls:MyTreeViewItem Key="3">
+                <controls:MyTreeViewItem Key="31"/>
+                <controls:MyTreeViewItem Key="32"/>
+                <controls:MyTreeViewItem Key="33">
+                    <controls:MyTreeViewItem Key="331"/>
+                    <controls:MyTreeViewItem Key="332"/>
+                    <controls:MyTreeViewItem Key="333"/>
+                    </controls:MyTreeViewItem>
+            </controls:MyTreeViewItem>
+            <controls:MyTreeViewItem Key="4"/>
+        </controls:MyTreeViewItem>-->
+        
         
     </Grid>
 </Window>
